--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
     "micro-validator": "0.0.5",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
